--- a/bannerlibrary/src/main/res/layout/layout_stack.xml
+++ b/bannerlibrary/src/main/res/layout/layout_stack.xml
@@ -9,8 +9,8 @@
         android:id="@+id/viewpager_lib"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginLeft="@dimen/margin_40dp"
-        android:layout_marginRight="@dimen/margin_40dp" />
+        android:layout_marginLeft="@dimen/margin_30dp"
+        android:layout_marginRight="@dimen/margin_30dp" />
 
     <LinearLayout
         android:id="@+id/layout_point"
@@ -21,7 +21,7 @@
         android:layout_marginBottom="@dimen/margin_16dp"
         android:orientation="horizontal" />
 
-    <TextView
+    <!--<TextView
         android:id="@+id/tv_tips"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -34,5 +34,5 @@
         android:paddingRight="@dimen/padding_16dp"
         android:paddingTop="@dimen/padding_8dp"
         android:textColor="@color/textcolor_white"
-        tools:text="@string/tips_exam" />
+        tools:text="@string/tips_exam" />-->
 </RelativeLayout>
