--- a/bannerlibrary/src/main/res/values/dimen.xml
+++ b/bannerlibrary/src/main/res/values/dimen.xml
@@ -5,6 +5,7 @@
     <dimen name="margin_12dp">12dp</dimen>
     <dimen name="margin_16dp">16dp</dimen>
     <dimen name="margin_20dp">20dp</dimen>
+    <dimen name="margin_30dp">20dp</dimen>
     <dimen name="margin_40dp">40dp</dimen>
 
     <dimen name="padding_4dp">4dp</dimen>
