--- a/bannerlibrary/src/main/res/values/dimen.xml
+++ b/bannerlibrary/src/main/res/values/dimen.xml
@@ -8,6 +8,7 @@
     <dimen name="margin_30dp">20dp</dimen>
     <dimen name="margin_40dp">40dp</dimen>
 
+    <dimen name="padding_2dp">2dp</dimen>
     <dimen name="padding_4dp">4dp</dimen>
     <dimen name="padding_8dp">8dp</dimen>
     <dimen name="padding_12dp">12dp</dimen>
